<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/voilet"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_calculator"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:hint="@string/enter_your_weight"
        android:textColorHint="@color/lesswhite"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:inputType="number"
        android:autofillHints=""
        />

    <EditText
        android:id="@+id/h_foot"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:hint="@string/enter_height_foot"
        android:textColorHint="@color/lesswhite"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:inputType="number"
        android:autofillHints="" />

    <EditText
        android:id="@+id/h_inch"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:hint="@string/enter_height_inch"
        android:textColorHint="@color/lesswhite"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:inputType="number" />

    <Button
        android:id="@+id/Submit"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/voilet"
        />

</LinearLayout>